--- a/src/css/harvest.css
+++ b/src/css/harvest.css
@@ -1,13 +1,20 @@
 /*! Color scheme E4F9F5, 30E3CA, 11999E, 40514E !*/
 
 body{
-    max-width: 960px;
+    max-width: 1200px;
     padding-top: 20px;
     margin: auto;
 }
 
+.header-heading{
+    background-color: #169e11;
+    padding: 20px;
+    border-radius: 5px;
+    width: 100%;
+}
+
 .header-link {
-    color: #11999e;
+    color: white;
     font-weight: bold;
     text-decoration: none;
     padding: 20px;
@@ -16,9 +23,10 @@ body{
 a.header-link:hover{
     color: #11999e;
     text-decoration: underline;
+    
 }
 a.header-link:visited{
-    color: #11999e;
+    color: white;
     font-weight: bold;
     text-decoration: none;
 }
@@ -27,8 +35,8 @@ a.header-link:visited{
 }
 .header-button {
     width: 150px;
-    border: 4px solid #11999e;
-    background: #11999e;
+    border: 4px solid #169e11;
+    background: #169e11;
     color: white;
     font-weight: bold;
     margin-left: 5px;
@@ -48,11 +56,11 @@ a.header-link:visited{
 }
 .search-bar-input {
     width: 400px;
-    border: 2px solid #11999e
+    border: 2px solid #169e11
 }
 
 .event-form-input {
-    border: 2px solid #11999e
+    border: 1px solid #11999e
 }
 .event-form-input:focus {
     border: 2px solid #11999e
@@ -61,8 +69,7 @@ a.header-link:visited{
     border: 2px solid #11999e
 }
 .event-form-select{
-    color: #11999e;
-    font-weight: bold;
+    color: #169e11;
 }
 
 .search-bar-input-border {
@@ -71,8 +78,8 @@ a.header-link:visited{
 }
 .search-bar-button {
     width: 150px;
-    border: 4px solid #11999e;
-    background: #11999e;
+    border: 4px solid #169e11;
+    background: #169e11;
     color: white;
     font-weight: bold;
     margin-left: 5px;
@@ -99,7 +106,7 @@ a.header-link:visited{
 {
     border: 0px solid;
     border-radius: 5px;
-    box-shadow: 5px 5px #11999e;
+    box-shadow: 2px 2px #169e11;
     
 }
 .harvest-event-card-title{
@@ -118,13 +125,13 @@ a.header-link:visited{
     min-height: 500px;
 }
 .harvest-event-main-div{
-    width: 1000px;
+    width: 1200px;
     float: left;
     margin: 0 auto;
 
 }
 .harvest-event-left-wrap{
-    width: 550px;
+    width: 700px;
     float:left;
     margin: 0 auto;
 }
@@ -145,6 +152,13 @@ a.header-link:visited{
     margin:5px;
     min-height: 500px;
     
+}
+.bio-image{
+    height: 300px;
+
+}
+.event-form{
+    width: 500px;
 }
 
 
