--- a/src/css/harvest.css
+++ b/src/css/harvest.css
@@ -1,254 +1,305 @@
 /*! Color scheme E4F9F5, 30E3CA, 11999E, 40514E !*/
 
-body{
-    max-width: 1200px;
-    padding-top: 20px;
-    margin: auto;
+:root {
+  --line-border-fill: #3498db;
+  --line-border-empty: #e0e0e0;
+  --line-border-fill-backup: #169e11;
 }
 
-.header-heading{
-    background-color: #169e11;
-    padding: 20px;
-    border-radius: 5px;
-    width: 100%;
+body {
+  max-width: 1200px;
+  padding-top: 20px;
+  margin: auto;
+}
+
+.event-container {
+}
+
+.event-card-left {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  max-width: 100%;
+  margin: 20px;
+  overflow: hidden;
+  width: 700px;
+}
+
+.header-heading {
+  background-color: var(--line-border-fill);
+  padding: 20px;
+  border-radius: 5px;
+  width: 100%;
 }
 
 .header-link {
-    color: white;
-    font-weight: bold;
-    text-decoration: none;
-    padding: 20px;
-    
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 20px;
 }
-a.header-link:hover{
-    color: white;
-    text-decoration: underline;
-    
+a.header-link:hover {
+  color: white;
+  text-decoration: underline;
 }
-a.header-link:visited{
-    color: white;
-    font-weight: bold;
-    text-decoration: none;
+a.header-link:visited {
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
 }
-.header-right{
-    float: right;
+.header-right {
+  float: right;
 }
 .header-button {
-    width: 150px;
-    border: 4px solid #169e11;
-    background: #169e11;
-    color: white;
-    font-weight: bold;
-    margin-left: 5px;
-     
+  width: 150px;
+  border: 4px solid var(--line-border-fill);
+  background: var(--line-border-fill);
+  color: white;
+  font-weight: bold;
+  margin-left: 5px;
 }
-.header-button-border{
-    border-radius: 10px;
-    padding: 10px;
-    border-spacing: 10px;
+.header-button-border {
+  border-radius: 10px;
+  padding: 10px;
+  border-spacing: 10px;
 }
 
 .search-bar-div {
-    max-width: 500px;
-    margin: auto;
-    padding-bottom: 20px;
-    
+  max-width: 500px;
+  margin: auto;
+  padding-bottom: 20px;
 }
 .search-bar-input {
-    width: 400px;
-    border: 2px solid #169e11
+  width: 400px;
+  border: 2px solid var(--line-border-fill);
+}
+.search-bar-input:focus {
+  text-decoration: none;
+  border: 0;
 }
 .search-bar-select {
-    width: 200px;
-    border: 2px solid #169e11
+  width: 200px;
+  border: 2px solid var(--line-border-fill);
+  padding: 2px;
 }
+.search-bar-select-gn {
+  width: 150px;
+  border: none;
+  cursor: pointer;
+}
+.search-bar-select-gn::after {
+  border: none;
+  outline: 0px;
+}
+.search-bar-select-gn:focus {
+  border: none;
+  outline: 0px;
+}
+.search-bar-select-gn:focus + .focus {
+  border: none;
+}
+
 .event-form-input {
-    border: 1px solid #11999e
+  border: 1px solid #11999e;
 }
 .event-form-input:focus {
-    border: 2px solid #11999e
+  border: 2px solid #11999e;
 }
 .event-form-input:hover {
-    border: 2px solid #11999e
+  border: 2px solid #11999e;
 }
-.event-form-select{
-    color: #169e11;
+.event-form-select {
+  color: #169e11;
 }
 
 .search-bar-input-border {
-    border-radius: 10px;
-    padding: 10px;
+  border-radius: 10px;
+  padding: 10px;
 }
 .search-bar-button {
-    width: 150px;
-    border: 4px solid #169e11;
-    background: #169e11;
-    color: white;
-    font-weight: bold;
-    margin-left: 5px;
-     
+  width: 150px;
+  border: 4px solid var(--line-border-fill);
+  background: var(--line-border-fill);
+  color: white;
+  font-weight: bold;
+  margin-left: 5px;
 }
-.search-bar-button-border{
-    border-radius: 10px;
-    padding: 10px;
-    border-spacing: 10px;
+.search-bar-button-border {
+  border-radius: 10px;
+  padding: 10px;
+  border-spacing: 10px;
 }
 .search-bar-button:focus {
-    text-decoration: none;
+  text-decoration: none;
 }
-.input-error{
-    color: red;
+.input-error {
+  color: red;
 }
 .event-list-article {
-    background-color: #11999e;
-    max-width: 440px;
-    padding: 10px;
-    padding-top: 10px;
+  background-color: var(--line-border-fill);
+  max-width: 440px;
+  padding: 10px;
+  padding-top: 10px;
 }
-.harvest-event-card
-{
-    gap: normal;
-    line-height: 24px;
-    color: hsl(0, 0%, 29%);
-    border-radius: 5px;
-    box-shadow: hsl(118, 81%, 34%) 5px 3px 7px 3px;
-    margin: 8px 0px 0px;
-    padding: 6px 0px 0px 5px;    
+.harvest-event-card {
+  gap: normal;
+  line-height: 24px;
+  color: hsl(0, 0%, 29%);
+  border-radius: 5px;
+  box-shadow: var(--line-border-fill) 5px 3px 7px 3px;
+  margin: 8px 0px 0px;
+  padding: 6px 0px 0px 5px;
 }
-.harvest-event-card-title{
-    font-size: 30px;
-    padding: 10px;
-    font-weight: bold;
+.harvest-event-card-title {
+  font-size: 30px;
+  padding: 10px;
+  font-weight: bold;
 }
-.harvest-event-card-address{
-    padding: 1px;
-    font-size: 10px;
+.harvest-event-card-address {
+  padding: 1px;
+  font-size: 10px;
 }
-.harvest-event-container{
-    width: 900px;
-    background-color: #11999e;
-    padding-top: 100px;
-    min-height: 500px;
+.harvest-event-container {
+  width: 900px;
+  background-color: var(--line-border-fill);
+  padding-top: 100px;
+  min-height: 500px;
 }
-.harvest-event-main-div{
-    width: 1200px;
-    float: left;
-    margin: 0 auto;
-
+.harvest-event-main-div {
+  width: 1200px;
+  float: left;
+  margin: 0 auto;
 }
-.harvest-event-left-wrap{
-    width: 700px;
-    float:left;
-    margin: 0 auto;
+.harvest-event-left-wrap {
+  width: 700px;
+  float: left;
+  margin: 0 auto;
 }
-.harvest-event-left-div{
-    
-    border-radius: 10px;
-    margin:5px;
-   
-
+.harvest-event-left-div {
+  border-radius: 10px;
+  margin: 5px;
 }
-.harvest-event-right-wrap{
-    width: 450px;
-    float:left;
-    margin: 0 auto;
+.harvest-event-right-wrap {
+  width: 450px;
+  float: left;
+  margin: 0 auto;
 }
-.harvest-event-right-div{
-    border-radius: 10px;
-    margin:5px;
-    min-height: 500px;
-    
+.harvest-event-right-div {
+  border-radius: 10px;
+  margin: 5px;
+  min-height: 500px;
 }
-.event-map{
-    position: fixed;
+.event-map {
+  position: fixed;
 }
-.bio-image{
-    height: 300px;
-
+.bio-image {
+  height: 300px;
 }
-.event-form{
-    width: 500px;
+.event-form {
+  width: 500px;
 }
-.social-icon{
-    width:30px;
-    margin-right: 20px;
+.social-icon {
+  width: 30px;
+  margin-right: 20px;
 }
-.organization-main-content{
-    width:70%;
-    float:left
+.organization-main-content {
+  width: 70%;
+  float: left;
 }
-.organization-phone-main{
-    font-size: 12px;
-    text-decoration: none;
-    color: black;
+.organization-phone-main {
+  font-size: 12px;
+  text-decoration: none;
+  color: black;
 }
-a.organization-phone-main{
-    font-size: 12px;
-    text-decoration: none;
-    color: black;
+a.organization-phone-main {
+  font-size: 12px;
+  text-decoration: none;
+  color: black;
 }
-a.organization-phone-main:link{
-    font-size: 12px;
-    text-decoration: none;
+a.organization-phone-main:link {
+  font-size: 12px;
+  text-decoration: none;
 }
-a.organization-phone-main:hover{
-    text-decoration: underline;
+a.organization-phone-main:hover {
+  text-decoration: underline;
 }
-.organization-events{
-    background-color: hsl(118, 81%, 34%);
-    float: right
+.organization-events {
+  background-color: hsl(118, 81%, 34%);
+  float: right;
 }
-.organization-container-main{
-
-    display: flex;
-    gap: normal;
-    line-height: 24px;
-    color: hsl(0, 0%, 29%);
-    border-radius: 5px;
-    box-shadow: hsl(118, 81%, 34%) 5px 3px 7px 3px;
-    margin: 8px 0px 0px;
-    padding: 6px 0px 0px 5px;
+.organization-container-main {
+  display: flex;
+  gap: normal;
+  line-height: 24px;
+  color: hsl(0, 0%, 29%);
+  border-radius: 5px;
+  box-shadow: var(--line-border-fill) 5px 3px 7px 3px;
+  margin: 8px 0px 0px;
+  padding: 6px 0px 0px 5px;
 }
-.organization-container-main div{
-    
+.organization-container-main div {
 }
-.organization-box-left{
-    flex-direction: column;
-    margin: 12px;
-    padding-right: 8px;
+.organization-container-main-image {
+  object-fit: cover;
+  width: 100px;
+  height: 100px;
 }
-.organization-box-name{
-    font-size: 24px;
+.organization-box-left {
+  flex-direction: column;
+  margin: 12px;
+  padding-right: 8px;
 }
-.organization-box-address{
-
+.organization-box-name {
+  font-size: 24px;
 }
-.organization-url{
-    text-decoration: none;
-    color: black;
+.organization-box-address {
 }
-.organization-box-social{
-
+.organization-url {
+  text-decoration: none;
+  color: black;
 }
-.organization-box-right{
-    flex-direction: column;
-    align-items: center;
+.organization-box-social {
 }
-.organization-box-events{
-    flex: 4;
-    align-items: center;
-    text-align: center;
-    background-color: #169e11;
-    color: white;
-
+.organization-box-right {
+  flex-direction: column;
+  align-items: center;
 }
-.organization-box-phone{
-    flex: 1;
+.organization-box-events {
+  flex: 4;
+  align-items: center;
+  text-align: center;
+  background-color: #169e11;
+  color: white;
 }
-a.organization-events-link{
-    text-decoration: none;
-    font-size: 50px;
-    color: white;
-    
+.organization-box-phone {
+  flex: 1;
+}
+a.organization-events-link {
+  text-decoration: none;
+  font-size: 50px;
+  color: white;
 }
 
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  padding: 1rem 0;
+}
+
+.card-event {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 15rem auto;
+  height: 20rem;
+  background: #fff;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  border-radius: 10px;
+  margin: auto;
+  overflow: hidden;
+}
